<resources>
    <!-- application level strings -->
    <string name="app_name">CheckListF</string>
    <string name="action_settings">Settings</string>

    <!-- menu options -->
    <string name="set_now">Set Now</string>
    <string name="full_view">Full View</string>
    <string name="short_view">Short View</string>
    <string name="set_checklist">Set Checklist</string>
    <string name="import_checklist">Import Checklist</string>
    <string name="export_checklist">Export Checklist</string>

    <!-- multiple use strings -->
    <string name="hello_world">Hello world!</string>
    <string name="button_use">USE</string>
    <string name="button_abort">ABORT</string>

    <!-- fragment_list_item strings -->
    <string name="list_item_title">Title</string>
    <string name="list_item_checking">Item Checking</string>
    <string name="list_item_checked">Checked</string>
    <string name="list_item_desc">Description</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="interval_title">Check Interval Parameters</string>
    <string name="interval_units">Units: </string>
    <string name="interval_units_desc">check list interval units string</string>
    <string name="interval_now">Now: </string>
    <string name="interval_now_desc">check list interval stamp integer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Fragment Image View String Resources -->
    <string name="image_view_use">USE</string>
    <string name="image_view_abort">ABORT</string>



</resources>
