<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/set_now"
          android:title="@string/set_now"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/import_checklist"
          android:title="@string/import_checklist"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/export_checklist"
          android:title="@string/export_checklist"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/full_view"
          android:title="@string/full_view"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/short_view"
          android:title="@string/short_view"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item android:id="@+id/set_checklist"
          android:title="@string/set_checklist"
          android:orderInCategory="100"
          app:showAsAction="never"/>

</menu>
